Finaliza ajustes no site da Dra. Priscilla: conteúdo, posicionamento e estilo

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Dra. Priscilla Almeida - Medicina do Esporte",
+  "name": "Dra. Priscilla Almeida - Performance e Saúde da Mulher",
   "short_name": "Dra. Priscilla",
-  "description": "Medicina do Esporte, Anestesiologia e abordagem integrativa para atletas e pessoas ativas",
+  "description": "Performance esportiva, saúde da mulher 40+, longevidade e atendimento 100% online com abordagem personalizada.",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
